--- a/package.json
+++ b/package.json
@@ -2,9 +2,7 @@
   "name": "@book-play-nx-monorepo/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {
-    "prepare": " install"
-  },
+  "scripts": {},
   "private": true,
   "dependencies": {
     "@angular/animations": "~19.1.0",
@@ -15,6 +13,7 @@
     "@angular/platform-browser": "~19.1.0",
     "@angular/platform-browser-dynamic": "~19.1.0",
     "@angular/router": "~19.1.0",
+    "@angular/material": "^19.1.3",
     "rxjs": "~7.8.0",
     "zone.js": "~0.15.0"
   },
@@ -26,7 +25,6 @@
     "@angular/cli": "~19.1.0",
     "@angular/compiler-cli": "~19.1.0",
     "@angular/language-service": "~19.1.0",
-    "@angular/material": "^19.1.3",
     "@eslint/js": "^9.8.0",
     "@nx/angular": "20.4.1",
     "@nx/cypress": "20.4.1",
