--- a/package.json
+++ b/package.json
@@ -10,12 +10,11 @@
     "@angular/compiler": "~19.1.0",
     "@angular/core": "~19.1.0",
     "@angular/forms": "~19.1.0",
+    "@angular/material": "^19.1.3",
     "@angular/platform-browser": "~19.1.0",
     "@angular/platform-browser-dynamic": "~19.1.0",
     "@angular/router": "~19.1.0",
-    "@angular/material": "^19.1.3",
-    "rxjs": "~7.8.0",
-    "zone.js": "~0.15.0"
+    "rxjs": "~7.8.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~19.1.0",
