Added NX libraries for constants, services and model. Make site use these local NX libraries. - // fix module import

--- a/apps/site/project.json
+++ b/apps/site/project.json
@@ -62,7 +62,9 @@
           "@angular/material/prebuilt-themes/pink-bluegrey.css",
           "apps/site/src/app/core/styles/main.scss"
         ],
-        "scripts": []
+        "scripts": [
+          "node_modules/string-strip-html/dist/string-strip-html.umd.js"
+        ]
       },
       "configurations": {
         "production": {
