Added NX utils TypeScript library for use across project. Make use of utils in site and services projects

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,7 +17,8 @@
     "paths": {
       "@book-play/constants": ["libs/constants/src/index.ts"],
       "@book-play/models": ["libs/models/src/index.ts"],
-      "@book-play/services": ["libs/services/src/index.ts"]
+      "@book-play/services": ["libs/services/src/index.ts"],
+      "@book-play/utils": ["libs/utils/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
