--- a/libs/services/package.json
+++ b/libs/services/package.json
@@ -5,12 +5,13 @@
     "@angular/common": "^19.1.0",
     "@angular/core": "^19.1.0",
     "@angular/router": " ~19.1.0",
-    "@book-play/models": "^0.0.1",
+    "@angular/cdk": "^19.1.3",
     "rxjs": "~7.8.0",
-    "@book-play/constants": "^0.0.1",
     "lodash": "^4.17.21",
     "dexie": "^4.0.11",
-    "@angular/cdk": "^19.1.3"
+    "@book-play/models": "^0.0.1",
+    "@book-play/constants": "^0.0.1",
+    "@book-play/utils": "0.0.1"
   },
   "sideEffects": false
 }
