Added NX books crawler project. Created new Book() class. Refactored utils library and Book usage types

--- a/libs/utils/package.json
+++ b/libs/utils/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "tslib": "^2.3.0",
     "rxjs": "~7.8.0",
+    "string-strip-html": "~13.4.8",
     "@book-play/models": "0.0.1",
     "@book-play/constants": "0.0.1"
   }
