--- a/apps/books-api/tsconfig.json
+++ b/apps/books-api/tsconfig.json
@@ -11,10 +11,6 @@
     }
   ],
   "compilerOptions": {
-    "esModuleInterop": true,
-    "module": "ES2022",
-    "types": ["node"],
-    "moduleResolution": "node",
-    "allowImportingTsExtensions": true
+    "esModuleInterop": true
   }
 }
