Added book-api service. Make use of global Book class and DBBook interface across applications. Refactoring and debugging.

--- a/apps/books-api/tsconfig.app.json
+++ b/apps/books-api/tsconfig.app.json
@@ -1,9 +1,7 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "../../dist/out-tsc",
-    "module": "commonjs",
-    "types": ["node", "express"]
+    "outDir": "../../dist/out-tsc"
   },
   "include": ["src/**/*.ts"],
   "exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"]
