--- a/apps/books-api/project.json
+++ b/apps/books-api/project.json
@@ -5,6 +5,40 @@
   "projectType": "application",
   "tags": [],
   "targets": {
+    "build": {
+      "executor": "@nx/esbuild:esbuild",
+      "outputs": ["{options.outputPath}"],
+      "defaultConfiguration": "production",
+      "options": {
+        "outputFileName": "books-api.js",
+        "thirdParty": true,
+        "platform": "node",
+        "outputPath": "dist/apps/books-api",
+        "format": ["cjs"],
+        "bundle": true,
+        "main": "apps/books-api/src/main.ts",
+        "tsConfig": "apps/books-api/tsconfig.app.json",
+        "externalDependencies": false,
+        "generatePackageJson": false,
+        "esbuildOptions": {
+          "sourcemap": true,
+          "outExtension": {
+            ".js": ".js"
+          }
+        }
+      },
+      "configurations": {
+        "development": {},
+        "production": {
+          "esbuildOptions": {
+            "sourcemap": false,
+            "outExtension": {
+              ".js": ".js"
+            }
+          }
+        }
+      }
+    },
     "serve": {
       "executor": "@nx/js:node",
       "defaultConfiguration": "development",
