--- a/apps/books-api/tsconfig.json
+++ b/apps/books-api/tsconfig.json
@@ -11,6 +11,10 @@
     }
   ],
   "compilerOptions": {
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "module": "ES2022",
+    "types": ["node"],
+    "moduleResolution": "node",
+    "allowImportingTsExtensions": true
   }
 }
