--- a/apps/site/tsconfig.spec.json
+++ b/apps/site/tsconfig.spec.json
@@ -6,7 +6,7 @@
     "target": "es2016",
     "types": ["jest", "node"]
   },
-  "files": ["src/test-setup.ts"],
+  "files": ["setup.jest.js"],
   "include": [
     "jest.config.ts",
     "src/**/*.test.ts",
