--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@angular/platform-browser": "~19.1.0",
     "@angular/platform-browser-dynamic": "~19.1.0",
     "@angular/router": "~19.1.0",
+    "@lithiumjs/angular": "^8.0.1",
+    "@lithiumjs/ngx-virtual-scroll": "^0.3.3",
     "cheerio": "^1.0.0",
     "mysql2": "^3.12.0",
     "rxjs": "~7.8.0",
