Prevent mobile devices from sleep while using site

--- a/apps/site/project.json
+++ b/apps/site/project.json
@@ -58,6 +58,7 @@
             "output": "/"
           }
         ],
+        "scripts": ["nosleep.js/dist/NoSleep.js"],
         "styles": [
           "@angular/material/prebuilt-themes/pink-bluegrey.css",
           "apps/site/src/app/core/styles/main.scss"
