--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@lithiumjs/ngx-virtual-scroll": "^0.3.3",
     "cheerio": "^1.0.0",
     "mysql2": "^3.12.0",
+    "nosleep.js": "^0.12.0",
     "rxjs": "~7.8.0",
     "windows-1251": "^3.0.4"
   },
