Prevent caching JS files

--- a/apps/site/project.json
+++ b/apps/site/project.json
@@ -23,6 +23,7 @@
       "executor": "@angular-devkit/build-angular:application",
       "outputs": ["{options.outputPath}"],
       "options": {
+        "outputHashing": "all",
         "outputPath": "dist/apps/site",
         "index": "apps/site/src/app/core/index.html",
         "browser": "apps/site/src/app/core/main.ts",
