--- a/apps/site/src/app/core/assets/.htaccess
+++ b/apps/site/src/app/core/assets/.htaccess
@@ -12,17 +12,25 @@
   RewriteRule ^(?!.*\.).*$ index.html [NC,L]
 </IfModule>
 
-# Disable browser caching for all files that don't get a hash string by Angular.
-<FilesMatch "^(?!.*\.([0-9a-z]{20})\.).*$">
-  <IfModule mod_headers.c>
-    FileETag None
-    Header unset ETag
-    Header unset Pragma
-    Header unset Cache-Control
-    Header unset Last-Modified
+# DISABLE CACHING
+<IfModule mod_headers.c>
+    Header set Cache-Control "no-cache, no-store, must-revalidate"
     Header set Pragma "no-cache"
-    Header set Cache-Control "max-age=0, no-cache, no-store, must-revalidate"
-    Header set Expires "Mon, 1 Jan 1900 00:00:00 GMT"
-  </IfModule>
+    Header set Expires 0
+</IfModule>
 
+<FilesMatch "\.(js)$">
+    <IfModule mod_expires.c>
+        ExpiresActive Off
+    </IfModule>
+    <IfModule mod_headers.c>
+        FileETag None
+        Header unset ETag
+        Header unset Pragma
+        Header unset Cache-Control
+        Header unset Last-Modified
+        Header set Pragma "no-cache"
+        Header set Cache-Control "max-age=0, no-cache, no-store, must-revalidate"
+        Header set Expires "Thu, 1 Jan 1970 00:00:00 GMT"
+    </IfModule>
 </FilesMatch>
