Added russian language detection before adding book to database

--- a/apps/crawler/tsconfig.json
+++ b/apps/crawler/tsconfig.json
@@ -15,6 +15,7 @@
     "module": "ES2022",
     "types": ["node"],
     "moduleResolution": "node",
-    "allowImportingTsExtensions": true
+    "allowImportingTsExtensions": true,
+    "allowSyntheticDefaultImports": true
   }
 }
