--- a/libs/services/tsconfig.spec.json
+++ b/libs/services/tsconfig.spec.json
@@ -4,8 +4,7 @@
     "outDir": "../../dist/out-tsc",
     "module": "commonjs",
     "target": "es2016",
-    "types": ["jest", "node"],
-    "esModuleInterop": true
+    "types": ["jest", "node"]
   },
   "include": [
     "jest.config.ts",
