--- a/apps/site/src/app/core/assets/manifest.json
+++ b/apps/site/src/app/core/assets/manifest.json
@@ -4,7 +4,7 @@
   "start_url": "/",
   "icons": [
     {
-      "src": "/assets/images/favicon.ico",
+      "src": "favicon.ico",
       "sizes": "256x256",
       "type": "image/x-icon"
     }
