--- a/libs/utils/package.json
+++ b/libs/utils/package.json
@@ -10,7 +10,6 @@
     "rxjs": "~7.8.0",
     "cheerio": "^1.0.0",
     "@book-play/models": "0.0.1",
-    "@book-play/constants": "0.0.1",
-    "languagedetect": "^2.0.0"
+    "@book-play/constants": "0.0.1"
   }
 }
