--- a/libs/utils-browser/package.json
+++ b/libs/utils-browser/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@book-play/utils",
+  "name": "@book-play/utils-browser",
   "version": "0.0.1",
   "private": true,
   "type": "commonjs",
