--- a/libs/utils-node/project.json
+++ b/libs/utils-node/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "utils",
+  "name": "utils-node",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/utils/src",
+  "sourceRoot": "libs/utils-node/src",
   "projectType": "library",
   "tags": [],
   "targets": {
@@ -9,17 +9,18 @@
       "executor": "@nx/js:tsc",
       "outputs": ["{options.outputPath}"],
       "options": {
-        "outputPath": "dist/libs/utils",
-        "main": "libs/utils/src/index.ts",
-        "tsConfig": "libs/utils/tsconfig.lib.json",
-        "assets": ["libs/utils/*.md"]
+        "outputPath": "dist/libs/utils-node",
+        "tsConfig": "libs/utils-node/tsconfig.lib.json",
+        "packageJson": "libs/utils-node/package.json",
+        "main": "libs/utils-node/src/index.ts",
+        "assets": ["libs/utils-node/*.md"]
       }
     },
     "test": {
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/utils/jest.config.ts"
+        "jestConfig": "libs/utils-node/jest.config.ts"
       }
     }
   }
