--- a/libs/utils-browser/tsconfig.json
+++ b/libs/utils-browser/tsconfig.json
@@ -11,7 +11,11 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "noPropertyAccessFromIndexSignature": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "types": ["node"],
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
+    "platform": "node"
   },
   "files": [],
   "include": [],
