--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -19,6 +19,7 @@
       "@book-play/models": ["libs/models/src/index.ts"],
       "@book-play/services": ["libs/services/src/index.ts"],
       "@book-play/utils-browser": ["libs/utils-browser/src/index.ts"],
+      "@book-play/utils-common": ["libs/utils-common/src/index.ts"],
       "@book-play/utils-node": ["libs/utils-node/src/index.ts"]
     }
   },
