--- a/apps/crawler/package.json
+++ b/apps/crawler/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.1",
   "dependencies": {
     "@book-play/constants": "0.0.1",
+    "@book-play/utils-common": "0.0.1",
     "@book-play/utils-node": "0.0.1",
     "@book-play/models": "0.0.1",
-    "mysql2": "^3.12.0",
-    "@book-play/utils-browser": "0.0.1"
+    "mysql2": "^3.12.0"
   }
 }
