Added author info scraper that uses litres site to get author data

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,6 +17,7 @@
     "paths": {
       "@book-play/constants": ["libs/constants/src/index.ts"],
       "@book-play/models": ["libs/models/src/index.ts"],
+      "@book-play/scraper": ["libs/scraper/src/index.ts"],
       "@book-play/services": ["libs/services/src/index.ts"],
       "@book-play/utils-browser": ["libs/utils-browser/src/index.ts"],
       "@book-play/utils-common": ["libs/utils-common/src/index.ts"],
