--- a/libs/services/package.json
+++ b/libs/services/package.json
@@ -10,10 +10,8 @@
     "dexie": "^4.0.11",
     "@book-play/models": "^0.0.1",
     "@book-play/constants": "^0.0.1",
-    "@book-play/utils-browser": "0.0.1"
-  },
-  "sideEffects": false,
-  "dependencies": {
+    "@book-play/utils-browser": "0.0.1",
     "@book-play/utils-common": "0.0.1"
-  }
+  },
+  "sideEffects": false
 }
