--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "cheerio": "^1.0.0",
     "mysql2": "^3.12.0",
     "nosleep.js": "^0.12.0",
+    "puppeteer": "^24.4.0",
+    "random-useragent": "^0.5.0",
     "rxjs": "~7.8.0",
     "windows-1251": "^3.0.4"
   },
