Added author page, links to author book in the description. New implementation for book/:id API call

--- a/libs/ui/tsconfig.json
+++ b/libs/ui/tsconfig.json
@@ -6,8 +6,7 @@
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
-    "esModuleInterop": true
+    "noFallthroughCasesInSwitch": true
   },
   "files": [],
   "include": [],
