--- a/apps/site/project.json
+++ b/apps/site/project.json
@@ -62,6 +62,7 @@
         "scripts": ["nosleep.js/dist/NoSleep.js"],
         "styles": [
           "@angular/material/prebuilt-themes/pink-bluegrey.css",
+          "perfect-scrollbar/css/perfect-scrollbar.css",
           "apps/site/src/app/modules/main/styles/main.scss"
         ]
       },
