--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cheerio": "^1.0.0",
     "mysql2": "^3.12.0",
     "nosleep.js": "^0.12.0",
+    "perfect-scrollbar": "^1.5.6",
     "puppeteer": "^24.4.0",
     "random-useragent": "^0.5.0",
     "rxjs": "~7.8.0",
