--- a/apps/site/project.json
+++ b/apps/site/project.json
@@ -85,10 +85,16 @@
         "development": {
           "optimization": false,
           "extractLicenses": false,
-          "sourceMap": true
+          "sourceMap": true,
+          "fileReplacements": [
+            {
+              "replace": "environments/environment.ts",
+              "with": "environments/environment.development.ts"
+            }
+          ]
         }
       },
-      "defaultConfiguration": "production"
+      "defaultConfiguration": "development"
     },
     "serve": {
       "executor": "@angular-devkit/build-angular:dev-server",
@@ -133,6 +139,18 @@
         "staticFilePath": "dist/apps/site/browser",
         "spa": true
       }
+    }
+  },
+  "generators": {
+    "@schematics/angular:component": {
+      "style": "scss",
+      "standalone": true,
+      "skipImport": true,
+      "changeDetection": "OnPush"
+    },
+    "@schematics/angular:pipe": {
+      "standalone": true,
+      "skipImport": true
     }
   }
 }
