--- a/apps/tts-api/tsconfig.json
+++ b/apps/tts-api/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "extends": "../../tsconfig.base.json",
+
   "files": [],
   "include": [],
   "references": [
@@ -12,7 +13,7 @@
   ],
   "compilerOptions": {
     "esModuleInterop": true,
-    "module": "ES2022",
+    "module": "commonjs",
     "types": ["node"],
     "moduleResolution": "node",
     "allowImportingTsExtensions": true
