--- a/libs/ui/project.json
+++ b/libs/ui/project.json
@@ -2,7 +2,7 @@
   "name": "ui",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/ui/src",
-  "prefix": "lib",
+  "prefix": "",
   "projectType": "library",
   "tags": ["ui"],
   "targets": {
