Removed resize logic for mobiles to hide address bar; moved no sleep logic to main component; got rid of root component

--- a/apps/site/tsconfig.app.json
+++ b/apps/site/tsconfig.app.json
@@ -4,7 +4,7 @@
     "outDir": "../../dist/out-tsc",
     "types": []
   },
-  "files": ["src/app/modules/main/main.ts"],
+  "files": ["src/app/main/main.ts"],
   "include": ["src/**/*.d.ts"],
   "exclude": ["jest.config.ts", "src/**/*.test.ts", "src/**/*.spec.ts"]
 }
