--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "@angular/router": "~19.1.0",
     "@lithiumjs/angular": "^8.0.1",
     "@lithiumjs/ngx-virtual-scroll": "^0.3.3",
+    "@ngrx/effects": "^19.1.0",
+    "@ngrx/router-store": "^19.1.0",
+    "@ngrx/store": "^19.1.0",
+    "@ngrx/store-devtools": "^19.1.0",
     "cheerio": "^1.0.0",
     "mysql2": "^3.12.0",
     "nosleep.js": "^0.12.0",
