--- a/apps/crawler/package.json
+++ b/apps/crawler/package.json
@@ -6,6 +6,7 @@
     "@book-play/utils-node": "0.0.1",
     "@book-play/models": "0.0.1",
     "@book-play/scraper": "0.0.1",
-    "mysql2": "^3.12.0"
+    "mysql2": "^3.12.0",
+    "cheerio": "^1.0.0"
   }
 }
