--- a/apps/crawler/tsconfig.json
+++ b/apps/crawler/tsconfig.json
@@ -12,7 +12,8 @@
   ],
   "compilerOptions": {
     "esModuleInterop": true,
-    "module": "ES2022",
+    "module": "es2022",
+    "target": "es2017",
     "types": ["node"],
     "moduleResolution": "node",
     "allowImportingTsExtensions": true,
