--- a/libs/utils-node/package.json
+++ b/libs/utils-node/package.json
@@ -7,6 +7,7 @@
   "types": "./src/index.d.ts",
   "dependencies": {
     "tslib": "^2.3.0",
-    "windows-1251": "^3.0.4"
+    "windows-1251": "^3.0.4",
+    "@book-play/constants": "0.0.1"
   }
 }
