--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ngrx/store-devtools": "^19.1.0",
     "cheerio": "^1.0.0",
     "mysql2": "^3.12.0",
+    "ngx-countdown": "^20.0.0",
     "nosleep.js": "^0.12.0",
     "perfect-scrollbar": "^1.5.6",
     "puppeteer": "^24.4.0",
