--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cheerio": "^1.0.0",
     "mysql2": "^3.12.0",
     "ngx-countdown": "^20.0.0",
+    "ngx-mat-timepicker": "^19.0.0",
     "nosleep.js": "^0.12.0",
     "perfect-scrollbar": "^1.5.6",
     "puppeteer": "^24.4.0",
