--- a/package.json
+++ b/package.json
@@ -5,22 +5,20 @@
   "scripts": {},
   "private": true,
   "dependencies": {
-    "@angular/animations": "~19.1.0",
-    "@angular/cdk": "^19.1.3",
-    "@angular/common": "~19.1.0",
-    "@angular/compiler": "~19.1.0",
-    "@angular/core": "~19.1.0",
-    "@angular/forms": "~19.1.0",
-    "@angular/material": "^19.1.3",
-    "@angular/platform-browser": "~19.1.0",
-    "@angular/platform-browser-dynamic": "~19.1.0",
-    "@angular/router": "~19.1.0",
-    "@lithiumjs/angular": "^8.0.1",
-    "@lithiumjs/ngx-virtual-scroll": "^0.3.3",
-    "@ngrx/effects": "^19.1.0",
-    "@ngrx/router-store": "^19.1.0",
-    "@ngrx/store": "^19.1.0",
-    "@ngrx/store-devtools": "^19.1.0",
+    "@angular/animations": "20.0.3",
+    "@angular/cdk": "20.0.3",
+    "@angular/common": "20.0.3",
+    "@angular/compiler": "20.0.3",
+    "@angular/core": "20.0.3",
+    "@angular/forms": "20.0.3",
+    "@angular/material": "20.0.3",
+    "@angular/platform-browser": "20.0.3",
+    "@angular/platform-browser-dynamic": "20.0.3",
+    "@angular/router": "20.0.3",
+    "@ngrx/effects": "^19.2.1",
+    "@ngrx/router-store": "^19.2.1",
+    "@ngrx/store": "^19.2.1",
+    "@ngrx/store-devtools": "^19.2.1",
     "cheerio": "^1.0.0",
     "mysql2": "^3.12.0",
     "ngx-countdown": "^20.0.0",
@@ -33,28 +31,28 @@
     "windows-1251": "^3.0.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~19.1.0",
-    "@angular-devkit/core": "~19.1.0",
-    "@angular-devkit/schematics": "~19.1.0",
-    "@angular/cdk-experimental": "^19.1.3",
-    "@angular/cli": "~19.1.0",
-    "@angular/compiler-cli": "~19.1.0",
-    "@angular/language-service": "~19.1.0",
+    "@angular-devkit/build-angular": "20.0.3",
+    "@angular-devkit/core": "20.0.3",
+    "@angular-devkit/schematics": "20.0.3",
+    "@angular/cdk-experimental": "20.0.3",
+    "@angular/cli": "~20.0.0",
+    "@angular/compiler-cli": "20.0.3",
+    "@angular/language-service": "20.0.3",
     "@eslint/js": "^9.8.0",
-    "@nx/angular": "20.4.1",
-    "@nx/cypress": "20.4.1",
-    "@nx/esbuild": "20.4.1",
-    "@nx/eslint": "20.4.1",
-    "@nx/eslint-plugin": "20.4.1",
-    "@nx/express": "^20.4.1",
-    "@nx/jest": "20.4.1",
-    "@nx/js": "20.4.1",
-    "@nx/node": "^20.4.1",
-    "@nx/web": "20.4.1",
-    "@nx/webpack": "^20.4.1",
-    "@nx/workspace": "20.4.1",
+    "@nx/angular": "^21.2.0",
+    "@nx/cypress": "^21.2.0",
+    "@nx/esbuild": "^21.2.0",
+    "@nx/eslint": "^21.2.0",
+    "@nx/eslint-plugin": "^21.2.0",
+    "@nx/express": "^21.2.0",
+    "@nx/jest": "^21.2.0",
+    "@nx/js": "^21.2.0",
+    "@nx/node": "^21.2.0",
+    "@nx/web": "^21.2.0",
+    "@nx/webpack": "^21.2.0",
+    "@nx/workspace": "^21.2.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
-    "@schematics/angular": "~19.1.0",
+    "@schematics/angular": "20.0.3",
     "@svgr/webpack": "^8.1.0",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
@@ -63,15 +61,15 @@
     "@types/jasmine": "^5.1.5",
     "@types/jest": "^29.5.12",
     "@types/lodash": "^4.17.15",
-    "@types/node": "18.16.9",
-    "@typescript-eslint/utils": "^8.19.0",
-    "angular-eslint": "^19.0.2",
+    "@types/node": "^24.0.3",
+    "@typescript-eslint/utils": "^8.34.1",
+    "angular-eslint": "^20.1.0",
     "autoprefixer": "^10.4.0",
-    "cypress": "^13.13.0",
+    "cypress": "^14.5.0",
     "dexie": "^4.0.11",
     "esbuild": "^0.19.2",
-    "eslint": "^9.8.0",
-    "eslint-config-prettier": "^9.0.0",
+    "eslint": "^9.29.0",
+    "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-cypress": "^3.5.0",
     "express": "^4.21.2",
     "husky": "^9.1.7",
@@ -79,7 +77,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-environment-node": "^29.7.0",
-    "jest-preset-angular": "~14.4.0",
+    "jest-preset-angular": "^14.6.0",
     "jsonc-eslint-parser": "^2.1.0",
     "karma": "^6.4.4",
     "karma-chrome-launcher": "^3.2.0",
@@ -87,8 +85,8 @@
     "karma-jasmine": "^5.1.0",
     "karma-jasmine-html-reporter": "^2.1.0",
     "lint-staged": "^15.4.3",
-    "ng-packagr": "~19.1.0",
-    "nx": "20.4.1",
+    "ng-packagr": "20.0.1",
+    "nx": "^21.2.0",
     "postcss": "^8.4.5",
     "postcss-url": "~10.1.3",
     "prettier": "^2.6.2",
@@ -97,8 +95,8 @@
     "ts-loader": "^9.5.2",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
-    "typescript": "~5.7.2",
-    "typescript-eslint": "^8.19.0",
+    "typescript": "5.8.3",
+    "typescript-eslint": "^8.34.1",
     "webpack-cli": "^5.1.4"
   }
 }
