--- a/apps/site/project.json
+++ b/apps/site/project.json
@@ -72,6 +72,7 @@
         ],
         "styles": [
           "perfect-scrollbar/css/perfect-scrollbar.css",
+          "css-star-rating/css/star-rating.min.css",
           "apps/site/src/app/main/styles/main.scss"
         ]
       },
