--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@ngrx/router-store": "^19.2.1",
     "@ngrx/store": "^19.2.1",
     "@ngrx/store-devtools": "^19.2.1",
+    "angular-star-rating": "^7.0.0",
     "cheerio": "^1.0.0",
+    "css-star-rating": "^1.3.1",
     "mysql2": "^3.12.0",
     "ngx-countdown": "^20.0.0",
     "ngx-mat-timepicker": "^19.0.0",
