--- a/libs/utils-browser/package.json
+++ b/libs/utils-browser/package.json
@@ -7,7 +7,6 @@
   "types": "./src/index.d.ts",
   "dependencies": {
     "tslib": "^2.3.0",
-    "rxjs": "~7.8.0",
-    "@book-play/constants": "0.0.1"
+    "rxjs": "~7.8.0"
   }
 }
