--- a/apps/books-api/tsconfig.json
+++ b/apps/books-api/tsconfig.json
@@ -12,6 +12,8 @@
   ],
   "compilerOptions": {
     "esModuleInterop": true,
+    "experimentalDecorators": true,
+    "target": "es6",
     "module": "commonjs",
     "types": ["node"],
     "moduleResolution": "node",
