--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ngx-mat-timepicker": "^19.0.0",
     "perfect-scrollbar": "^1.5.6",
     "puppeteer": "^24.4.0",
+    "qs": "^6.14.0",
     "random-useragent": "^0.5.0",
     "rxjs": "~7.8.0",
     "windows-1251": "^3.0.4"
@@ -63,6 +64,7 @@
     "@types/jest": "^29.5.12",
     "@types/lodash": "^4.17.15",
     "@types/node": "^24.0.3",
+    "@types/qs": "^6.14.0",
     "@typescript-eslint/utils": "^8.34.1",
     "angular-eslint": "^20.1.0",
     "autoprefixer": "^10.4.0",
