BOOK-9: Доделать crawler с учетом новых изменений

--- a/apps/crawler/project.json
+++ b/apps/crawler/project.json
@@ -16,7 +16,7 @@
         "outputPath": "dist/apps/crawler",
         "format": ["cjs"],
         "bundle": true,
-        "main": "apps/crawler/src/main.ts",
+        "main": "apps/crawler/src/app.ts",
         "tsConfig": "apps/crawler/tsconfig.app.json",
         "esbuildConfig": "environments/esbuild.config.ts",
         "externalDependencies": false,
