BOOK-9: Доделать crawler с учетом новых изменений - // fix test

--- a/libs/utils-node/tsconfig.json
+++ b/libs/utils-node/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "es2022",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
+    "esModuleInterop": true,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
