--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "prepare": "husky"
+    "prepare": "husky init",
+    "lint": "npx nx run-many --target=lint --all"
   },
   "private": true,
   "dependencies": {
