--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "license": "MIT",
   "scripts": {
     "prepare": "husky init",
-    "lint": "npx nx run-many --target=lint --all"
+    "lint": "npx nx run-many --target=lint --all",
+    "test-all": "npx nx run-many --target=test --all"
   },
   "private": true,
   "dependencies": {
