--- a/apps/site/project.json
+++ b/apps/site/project.json
@@ -104,13 +104,7 @@
         "development": {
           "optimization": false,
           "extractLicenses": false,
-          "sourceMap": true,
-          "fileReplacements": [
-            {
-              "replace": "environments/environment.ts",
-              "with": "environments/environment.development.ts"
-            }
-          ]
+          "sourceMap": true
         }
       },
       "defaultConfiguration": "development"
