--- a/apps/crawler/project.json
+++ b/apps/crawler/project.json
@@ -8,17 +8,16 @@
     "build": {
       "executor": "@nx/esbuild:esbuild",
       "outputs": ["{options.outputPath}"],
-      "defaultConfiguration": "development",
+      "defaultConfiguration": "production",
       "options": {
         "outputFileName": "add-books.js",
         "thirdParty": true,
         "platform": "node",
         "outputPath": "dist/apps/crawler",
-        "format": ["cjs"],
+        "format": ["esm"],
         "bundle": true,
         "main": "apps/crawler/src/app.ts",
         "tsConfig": "apps/crawler/tsconfig.app.json",
-        "esbuildConfig": "environments/esbuild.config.ts",
         "externalDependencies": false,
         "generatePackageJson": false
       },
