--- a/apps/tts-api/project.json
+++ b/apps/tts-api/project.json
@@ -8,17 +8,16 @@
     "build": {
       "executor": "@nx/esbuild:esbuild",
       "outputs": ["{options.outputPath}"],
-      "defaultConfiguration": "development",
+      "defaultConfiguration": "production",
       "options": {
         "outputFileName": "tts-api.js",
         "thirdParty": true,
         "platform": "node",
         "outputPath": "dist/apps/tts-api",
-        "format": ["cjs"],
+        "format": ["esm"],
         "bundle": true,
         "main": "apps/tts-api/src/main.ts",
         "tsConfig": "apps/tts-api/tsconfig.app.json",
-        "esbuildConfig": "environments/esbuild.config.ts",
         "externalDependencies": false,
         "generatePackageJson": false
       },
