--- a/apps/site/project.json
+++ b/apps/site/project.json
@@ -142,7 +142,8 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "apps/site/jest.config.ts"
+        "jestConfig": "apps/site/jest.config.ts",
+        "tsConfig": "apps/site/tsconfig.spec.json"
       }
     },
     "serve-static": {
