--- a/package.json
+++ b/package.json
@@ -5,21 +5,20 @@
   "scripts": {
     "prepare": "husky init"
   },
-  "private": true,
   "dependencies": {
-    "@angular/animations": "20.0.3",
-    "@angular/cdk": "20.0.3",
-    "@angular/common": "20.0.3",
-    "@angular/compiler": "20.0.3",
-    "@angular/core": "20.0.3",
-    "@angular/forms": "20.0.3",
-    "@angular/material": "20.0.3",
-    "@angular/platform-browser": "20.0.3",
-    "@angular/platform-browser-dynamic": "20.0.3",
-    "@angular/router": "20.0.3",
+    "@angular/animations": "20.2.4",
+    "@angular/cdk": "20.2.2",
+    "@angular/common": "20.2.4",
+    "@angular/compiler": "20.2.4",
+    "@angular/core": "20.2.4",
+    "@angular/forms": "20.2.4",
+    "@angular/material": "20.2.2",
+    "@angular/platform-browser": "20.2.4",
+    "@angular/platform-browser-dynamic": "20.2.4",
+    "@angular/router": "20.2.4",
     "@ngrx/effects": "^20.0.1",
     "@ngrx/router-store": "^20.0.1",
-    "@ngrx/store": "^20.0.1",
+    "@ngrx/store": "20.0.0",
     "@ngrx/store-devtools": "^20.0.1",
     "angular-star-rating": "^7.0.0",
     "cheerio": "^1.0.0",
@@ -34,40 +33,40 @@
     "windows-1251": "^3.0.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "20.0.3",
-    "@angular-devkit/core": "20.0.3",
-    "@angular-devkit/schematics": "20.0.3",
-    "@angular/cdk-experimental": "20.0.3",
-    "@angular/cli": "~20.0.0",
-    "@angular/compiler-cli": "20.0.3",
-    "@angular/language-service": "20.0.3",
+    "@angular-devkit/build-angular": "20.2.2",
+    "@angular-devkit/core": "20.2.2",
+    "@angular-devkit/schematics": "20.2.2",
+    "@angular/cdk-experimental": "20.2.2",
+    "@angular/cli": "~20.2.0",
+    "@angular/compiler-cli": "20.2.4",
+    "@angular/language-service": "20.2.4",
     "@eslint/js": "^9.34.0",
-    "@nx/angular": "^21.2.0",
-    "@nx/cypress": "^21.2.0",
-    "@nx/esbuild": "^21.2.0",
-    "@nx/eslint": "^21.2.0",
-    "@nx/eslint-plugin": "^21.2.0",
-    "@nx/express": "^21.2.0",
-    "@nx/jest": "^21.2.0",
-    "@nx/js": "^21.2.0",
-    "@nx/node": "^21.2.0",
-    "@nx/web": "^21.2.0",
-    "@nx/webpack": "^21.2.0",
-    "@nx/workspace": "^21.2.0",
+    "@nx/angular": "21.5.1",
+    "@nx/cypress": "21.5.1",
+    "@nx/esbuild": "21.5.1",
+    "@nx/eslint": "21.5.1",
+    "@nx/eslint-plugin": "21.5.1",
+    "@nx/express": "21.5.1",
+    "@nx/jest": "21.5.1",
+    "@nx/js": "21.5.1",
+    "@nx/node": "21.5.1",
+    "@nx/web": "21.5.1",
+    "@nx/webpack": "21.5.1",
+    "@nx/workspace": "21.5.1",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
-    "@schematics/angular": "20.0.3",
+    "@schematics/angular": "20.2.2",
     "@svgr/webpack": "^8.1.0",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@types/express": "^5.0.0",
     "@types/jasmine": "^5.1.5",
-    "@types/jest": "^29.5.12",
+    "@types/jest": "30.0.0",
     "@types/lodash": "^4.17.15",
     "@types/node": "^24.0.3",
     "@types/qs": "^6.14.0",
     "@typescript-eslint/utils": "^8.34.1",
-    "angular-eslint": "^20.1.0",
+    "angular-eslint": "20.2.0",
     "autoprefixer": "^10.4.0",
     "cypress": "^14.5.0",
     "dexie": "^4.0.11",
@@ -78,10 +77,10 @@
     "express": "^4.21.2",
     "husky": "^9.1.7",
     "jasmine": "^5.5.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
+    "jest": "30.0.5",
+    "jest-environment-jsdom": "30.0.5",
     "jest-environment-node": "^29.7.0",
-    "jest-preset-angular": "^14.6.0",
+    "jest-preset-angular": "15.0.0",
     "jsonc-eslint-parser": "^2.1.0",
     "karma": "^6.4.4",
     "karma-chrome-launcher": "^3.2.0",
@@ -89,18 +88,19 @@
     "karma-jasmine": "^5.1.0",
     "karma-jasmine-html-reporter": "^2.1.0",
     "lint-staged": "^15.4.3",
-    "ng-packagr": "20.0.1",
-    "nx": "^21.2.0",
+    "ng-packagr": "20.2.0",
+    "nx": "21.5.1",
     "postcss": "^8.4.5",
     "postcss-url": "~10.1.3",
     "prettier": "^2.6.2",
     "react-refresh": "^0.10.0",
-    "ts-jest": "^29.1.0",
+    "ts-jest": "29.4.1",
     "ts-loader": "^9.5.2",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
-    "typescript": "5.8.3",
+    "typescript": "5.9.2",
     "typescript-eslint": "^8.34.1",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "jest-util": "30.0.5"
   }
 }
