BOOK-48: Функионал который по какому то секретному признаку будет показывать заблокированный контент

--- a/apps/books-api/project.json
+++ b/apps/books-api/project.json
@@ -14,7 +14,7 @@
         "thirdParty": true,
         "platform": "node",
         "outputPath": "dist/apps/books-api",
-        "format": ["esm"],
+        "format": ["cjs"],
         "bundle": true,
         "main": "apps/books-api/src/main.ts",
         "tsConfig": "apps/books-api/tsconfig.app.json",
